<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="130dp"
        android:text="@string/Titulo"
        android:textColor="#DC143C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMarca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@android:drawable/ic_menu_manage"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000 "
        android:textColorHint="#2196F3 "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:onClick="onClick"
        android:text="@string/agregar"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpiar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteDimension" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:onClick="onClick"
        android:text="@string/limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteDimension" />

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="153dp"
        android:onClick="onClick"
        android:text="@string/mostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAgregar" />

    <EditText
        android:id="@+id/editModelo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/modelo"
        android:inputType="text"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000 "
        android:textColorHint="#2196F3 "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMarca" />

    <EditText
        android:id="@+id/editCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        android:maxLength="4"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="textStart"
        android:textColor="#000000 "
        android:textColorHint="#2196F3 "
        app:layout_constraintEnd_toStartOf="@+id/editCosto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editModelo" />

    <EditText
        android:id="@+id/editCosto"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/costo"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="center"
        android:textColor="#000000 "
        android:textColorHint="#2196F3 "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editModelo" />

    <EditText
        android:id="@+id/editPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:hint="@string/peso"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="center"
        android:textColor="#000000 "
        android:textColorHint="#2196F3 "
        app:layout_constraintEnd_toStartOf="@+id/editTamanio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCodigo" />

    <EditText
        android:id="@+id/editTamanio"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/tamanio"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="center"
        android:textColor="#000000 "
        android:textColorHint="#2196F3 "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCosto" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteDimension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="10dp"
        android:hint="@string/dimensiones"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000000 "
        android:textColorHint="#2196F3 "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTamanio" />

    <TextView
        android:id="@+id/textViewMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="130dp"
        android:text="@string/contenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMostrar" />
</androidx.constraintlayout.widget.ConstraintLayout>